--- a/finsent/Frontend/index.html
+++ b/finsent/Frontend/index.html
@@ -716,7 +716,7 @@
             }, 800);
 
             try {
-                const response = await fetch('https://finsent-backend.onrender.com/', {
+                const response = await fetch('https://finsent-backend.onrender.com/api/analyze', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
