--- a/finsent/Frontend/index.html
+++ b/finsent/Frontend/index.html
@@ -608,7 +608,7 @@
         <div class="search-section">
             <div class="input-wrapper">
                 <div class="input-group">
-                    <label class="input-label">Enter a Ticker, Company, or Commodity, and enter a query amount less than 20. One query translates to 5 articles.</label>
+                    <label class="input-label">Enter a Ticker, Company, or Commodity, and enter a query amount less than 10. One query translates to ~5 articles after duplication removal.</label>
                     <input type="text" id="tickerInput" placeholder="Enter ticker or asset name" value="gold">
                 </div>
                 <div class="input-group">
@@ -935,3 +935,4 @@
 </body>
 
 </html>
+
