--- a/finsent/Frontend/financials.html
+++ b/finsent/Frontend/financials.html
@@ -750,14 +750,14 @@
 
         <header>
             <h1>Financial Analyzer</h1>
-            <p class="subtitle">Evaluate company financial health using academic scoring models and key metrics. Enter a stock ticker to analyze fundamentals.</p>
+            <p class="subtitle">A financial rundown of a company. Scores are not definitve; metrics will function differently from industry to industry.</p>
         </header>
 
         <div class="search-section">
             <div class="input-wrapper">
                 <div class="input-group">
-                    <label class="input-label">Enter a stock ticker symbol (e.g., AAPL, MSFT, GOOGL)</label>
-                    <input type="text" id="tickerInput" placeholder="Enter ticker symbol" value="AAPL">
+                    <label class="input-label">Enter a stock ticker symbol (e.g., MSFT for Microsoft)</label>
+                    <input type="text" id="tickerInput" placeholder="Enter ticker symbol" value="MSFT">
                 </div>
                 <button onclick="analyzeFinancials()" id="analyzeBtn">Analyze</button>
             </div>
