--- a/finsent/Frontend/index.html
+++ b/finsent/Frontend/index.html
@@ -217,16 +217,6 @@
             color: var(--secondary);
         }
 
-        .footer a {
-            color: var(--primary);
-            text-decoration: none;
-            font-weight: 500;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-
         @media (max-width: 768px) {
             .features-grid {
                 grid-template-columns: 1fr;
@@ -327,7 +317,7 @@
         </div>
 
         <div class="footer">
-            <p>Built for educational purposes. Not financial advice. <a href="https://github.com/noahcowley19/finsent" target="_blank" rel="noopener noreferrer">View on GitHub</a></p>
+            <p>Information is not to be taken for financial advice.</p>
         </div>
     </div>
 </body>
