--- a/finsent/Frontend/sentiment.html
+++ b/finsent/Frontend/sentiment.html
@@ -654,7 +654,7 @@
         <div class="search-section">
             <div class="input-wrapper">
                 <div class="input-group">
-                    <label class="input-label">Enter a company, cryptocurrency, or commodity. One query translates to roughly 5 articles after duplication removal.</label>
+                    <label class="input-label">Enter a company, cryptocurrency, or commodity, and enter a query amount no more than 10. One query translates to roughly 5 articles after duplication removal.</label>
                     <input type="text" id="tickerInput" placeholder="Enter ticker or asset name" value="gold">
                 </div>
                 <div class="input-group">
@@ -969,3 +969,4 @@
     </script>
 </body>
 </html>
+
